# SecureAI

./: .gitignore  README.md  pyproject.toml  secureai_router.py  telegram_vlm_bot.py  vlm-smart-bot.service
SecureAI/: __init__.py  client.py
examples/: auto_search_chat.py  auto_search_persistent_memory_chat.py
secureai_server/: app.py  cli.py
